--- a/login.html
+++ b/login.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #f2f2f2;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -18,56 +16,69 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
         }
-        .login-container h1 {
+        h2 {
             margin-bottom: 20px;
+            color: #333;
         }
-        .login-container label {
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .form-group label {
             display: block;
-            margin-bottom: 8px;
+            margin-bottom: 5px;
+            color: #333;
         }
-        .login-container input {
+        .form-group input {
             width: 100%;
             padding: 8px;
-            margin-bottom: 16px;
             border: 1px solid #ccc;
             border-radius: 4px;
         }
-        .login-container input[type="submit"] {
-            background-color: #007bff;
-            color: white;
+        .form-group button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
             border: none;
-            cursor: pointer;
+            border-radius: 4px;
+            color: white;
+            font-size: 16px;
         }
-        .login-container input[type="submit"]:hover {
-            background-color: #0056b3;
+        .form-group button:hover {
+            background-color: #45a049;
         }
-        .messages {
+        .error-message {
             color: red;
+            margin-bottom: 10px;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <h1>Login</h1>
-        <form method="post">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-            <input type="submit" value="Login">
-        </form>
+        <h2>Login</h2>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <div class="messages">
-                    <ul>
-                        {% for message in messages %}
-                            <li>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
+                <div class="error-message">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
                 </div>
             {% endif %}
         {% endwith %}
+        <form action="/login" method="post">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div class="form-group">
+                <button type="submit">Login</button>
+            </div>
+        </form>
     </div>
 </body>
 </html>
