--- a/success.html
+++ b/success.html
@@ -1,50 +1,18 @@
+<!-- success.html -->
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Success</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .success-container {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            text-align: center;
-        }
-        h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-        .button-container {
-            margin-top: 20px;
-        }
-        .button-container a {
-            text-decoration: none;
-            color: white;
-            background-color: #4CAF50;
-            padding: 10px 20px;
-            border-radius: 4px;
-        }
-        .button-container a:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Success</title>
 </head>
 <body>
-    <div class="success-container">
-        <h2>Login Successful!</h2>
-        <p>Welcome, {{ username }}!</p>
-        <div class="button-container">
-            <a href="{{ url_for('logout') }}">Logout</a>
-        </div>
-    </div>
+    <h1>Welcome, {{ username }}</h1>
+    
+    <!-- Logout Form -->
+    <form action="{{ url_for('logout') }}" method="post">
+        <button type="submit">Logout</button>
+    </form>
 </body>
 </html>
